# lithic3d

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.txt  pi5_toolchain.cmake  start_linux_env.sh  start_pi5_env.sh
engine/: CMakeLists.txt  README.md
engine/core/: CMakeLists.txt
engine/core/include/fge/: audio_system.hpp  camera.hpp  component_store.hpp  component_types.hpp  graph.hpp  hash.hpp  logger.hpp  math.hpp  platform_paths.hpp  product_activation.hpp  strings.hpp  sys_behaviour.hpp  sys_render.hpp  sys_spatial.hpp  systems.hpp  thread.hpp  time.hpp  triple_buffer.hpp  utils.hpp  work_queue.hpp  xml.hpp
engine/core/include/lithic3d/: audio_system.hpp  b_generic.hpp  camera_2d.hpp  camera_3d.hpp  component_store.hpp  component_types.hpp  drm.hpp  ecs.hpp  engine.hpp  entity_factory.hpp  entity_id.hpp  event_system.hpp  events.hpp  exception.hpp  factory.hpp  file_system.hpp  functor.hpp  game.hpp  game_data_paths.hpp  gltf.hpp  graph.hpp  hash.hpp  input.hpp  lithic3d.hpp  logger.hpp  loose_octree.hpp  math.hpp  model_loader.hpp  platform.hpp  platform_paths.hpp  product_activation.hpp  render_resource_loader.hpp  renderables.hpp  renderer.hpp  resource_manager.hpp  scene.hpp  scoped_lock.hpp  shader_manifest.hpp  spatial_container.hpp  strings.hpp  (+26 more)
engine/core/src/: audio_system.hpp  b_generic.cpp  camera.cpp  camera_2d.cpp  camera_3d.cpp  ecs.cpp  ecs.hpp  engine.cpp  entity_factory.cpp  entity_id.cpp  event_system.cpp  event_system.hpp  factory.cpp  file_system.hpp  game.hpp  game_data_paths.cpp  gltf.cpp  logger.cpp  loose_octree.cpp  math.cpp  math.hpp  model_loader.cpp  platform.hpp  render_resource_loader.cpp  renderables.cpp  renderables.hpp  renderer.hpp  resource_manager.cpp  scene.cpp  scoped_lock.cpp  shader_manifest.cpp  spatial_container.cpp  strings.cpp  strings.hpp  sys_animation.hpp  sys_animation_2d.cpp  sys_behaviour.cpp  sys_collision.cpp  sys_properties.cpp  sys_render.cpp  (+19 more)
engine/core/src/vulkan/: compute_pipeline.cpp  compute_pipeline.hpp  gpu_buffer.cpp  gpu_buffer.hpp  gpu_buffer_manager.cpp  gpu_buffer_manager.hpp  pipeline.cpp  pipeline.hpp  render_graph.hpp  render_resources.cpp  render_resources.hpp  renderer.cpp  shader.cpp  shader.hpp  shader_system.cpp  shader_system.hpp  ubo.cpp  ubo.hpp  vma.cpp  vulkan_utils.cpp  vulkan_utils.hpp
engine/platform/android/: build.gradle  settings.gradle
engine/platform/android/data/: build.gradle
engine/platform/android/vcpkg/: vcpkg.json
engine/platform/default/vcpkg/: vcpkg.json
engine/platform/ios/: Info.plist
engine/platform/osx/: .gitignore
engine/platform/pi5/: toolchain.cmake
engine/platform/pi5/triplets/: pi5.cmake
engine/platform/pi5/vcpkg/: vcpkg-configuration.json  vcpkg.json
engine/src/android/: .gitattributes  .gitignore  build.gradle
engine/src/default/: application.cpp  audio_system.cpp  drm.cpp  file_system.cpp  product_activation.cpp  vulkan_window_delegate.cpp
engine/src/ios/: application.cpp  application.h  application.hpp  platform_paths.cpp  vulkan_window_delegate.mm  wrapper.mm
engine/src/ios_sim/: audio_system.cpp
engine/src/linux/: platform_paths.cpp
engine/src/pi5/: application.cpp  vulkan_window_delegate.cpp
engine/src/windows/: platform_paths.cpp
engine/test/: CMakeLists.txt
engine/test/src/: aligned_bytes_test.cpp  camera_3d_test.cpp  component_store_test.cpp  graph_test.cpp  math_test.cpp  mesh_test.cpp  mock_logger.hpp  octree_test.cpp  resource_manager_test.cpp  sys_collision_test.cpp  sys_render_3d_test.cpp  thread_test.cpp  tree_set_test.cpp  triple_buffer_test.cpp  utils_test.cpp
engine/tools/: CMakeLists.txt
engine/tools/height_map_gen/: CMakeLists.txt
engine/tools/height_map_gen/src/: height_map_gen.cpp  height_map_gen.hpp  main.cpp
engine/tools/image_partitioner/: CMakeLists.txt
engine/tools/image_partitioner/src/: image_partitioner.cpp  image_partitioner.hpp  main.cpp
engine/tools/shader_compiler/: CMakeLists.txt
engine/tools/shader_compiler/src/: main.cpp  shader_compiler.cpp  shader_compiler.hpp  shader_system.cpp  shader_system.hpp
engine/tools/world_editor/: CMakeLists.txt
engine/tools/world_editor/data/: shaders.xml
engine/tools/world_editor/src/: application.cpp  canvas.cpp  canvas.hpp  collision_component_panel.cpp  component_panel.hpp  components_panel.cpp  components_panel.hpp  current_transform_panel.cpp  current_transform_panel.hpp  cursor_panel.cpp  cursor_panel.hpp  editor_core.cpp  editor_core.hpp  event_emitter.cpp  event_emitter.hpp  main_window.cpp  main_window.hpp  mode_ui.hpp  prefabs_panel.cpp  prefabs_panel.hpp  scene_panel.cpp  scene_panel.hpp  spatial_component_panel.cpp  tools.cpp  tools.hpp  transform_panel.cpp  transform_panel.hpp  world_editor.cpp  world_editor.hpp
engine/tools/world_init/: CMakeLists.txt
engine/tools/world_init/src/: world_init.cpp  world_init.hpp
freehold_game_engine/engine/: CMakeLists.txt  README.md
freehold_game_engine/engine/core/: CMakeLists.txt
freehold_game_engine/engine/core/src/: b_generic.cpp  camera_2d.cpp  camera_3d.cpp  ecs.cpp  engine.cpp  gltf.cpp  logger.cpp  math.cpp  model_loader.cpp  sys_ui.cpp  (+12 more)
minefield/: .gitattributes  .gitignore  CMakeLists.txt  game.cmake
minefield/assets/: icon.xcf
minefield/icons/osx/: app.icns
minefield/src/: audio_system.cpp  b_coin_counter.cpp  b_coin_counter.hpp  b_collectable.cpp  b_collectable.hpp  b_exit.cpp  b_exit.hpp  b_generic.hpp  b_numeric_tile.cpp  b_numeric_tile.hpp  b_player.cpp  b_player.hpp  b_stick.cpp  b_stick.hpp  b_wanderer.cpp  b_wanderer.hpp  component_types.hpp  drm.cpp  drm.hpp  ecs.hpp  event_system.cpp  event_system.hpp  events.hpp  game.cpp  game.hpp  game_events.hpp  game_options.cpp  game_options.hpp  input.hpp  math.cpp  math.hpp  menu_system.cpp  menu_system.hpp  mobile_controls.cpp  mobile_controls.hpp  platform.hpp  product_activation.cpp  product_activation.hpp  renderables.hpp  renderer.hpp  (+20 more)
minefield/src/vulkan/: pipeline.cpp  pipeline.hpp  render_resources.cpp  render_resources.hpp  renderer.cpp  shader_system.cpp  shader_system.hpp
(+402 files in other folders)
